2009-04-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.36

2009-04-07  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Make top-left button unselected
	on state change rather than after the state change.

2009-04-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/main.c (hd_fpu_set_mode): New. Based on Leonid's patch for
	NB#107185.
	(main): Call hd_fpu_set_mode to set CPU for fast float calculations.

2009-04-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#109009 desktop crashed when gridcombobox is launched

	* src/mb/hd-wm.c (hd_wm_client_new):
	  Create HdApp:s from for unknown client types.
	  libmatchbox created MBWMClientApp:s but all of hd expects HdApp:s.

2009-04-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Improved close application animation in tasw.
	Now it should look the same as in maximized case.

	* src/home/hd-task-navigator.c
	* src/util/hd-transition.h:
	  Made the parcile number and file name public.
	* src/util/hd-transition.c

2009-04-06  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix for NB#109714 (highlight on launcher not disappearing)
	* data/transitions.ini: Refactoring, tweaking of transition times 
	  for glow effect
	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c: Make sure transition values are read
	  from transitions.ini
	* src/launcher/hd-launcher-page.c: Check cursor movement while
	  dragging and deselect icon if it exceeds that value
	* src/launcher/hd-launcher-tile.c
	* src/launcher/hd-launcher-tile.h: Move code for detecting cursor
	  movement into hd-launcher-page, increase size of highlight so
	  it no longer clips
	* src/tidy/tidy-highlight.c: Ensure highlight copes with being bigger 
	  than the texture it uses
	* src/home/hd-render-manager.c: Changing names in transitions.ini and
	  prepare for 3 levels of zoom
	* src/tidy/tidy-blur-group.c: ensure that edge of zoomed area fits
	  the edge of the screen